# ecs

./: CMakeLists.txt  LICENSE
include/: entity.h  entity.hpp  events.h  events.hpp  registry.h  registry.hpp  sparse_vector.h  sparse_vector.hpp  storage.h  storage.hpp  system.h  system.hpp  type_enumerator.h  types.h
src/: components_storage.cpp  entity.cpp  registry.cpp  system_base.cpp
tests/: CMakeLists.txt  common.h  registry.cpp  sparse_vector.cpp  storage.cpp  type_enumerator.cpp
